app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body,
input,
button,
textarea {
  font-family: "GmarketSansMedium", sans-serif;
}

@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&display=swap');
@font-face {
  font-family: "GmarketSansMedium";
  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff")
    format("woff");
  font-weight: normal;
  font-style: normal;
}

code {
  font-family: "Noto Sans Mono", monospace;
}

article p {
  @apply my-4;
}

article a {
  @apply text-blue-500;
  @apply hover:underline;
  @apply visited:text-purple-500;
}

article ul {
  @apply list-disc;
  @apply list-outside;
  @apply ml-8;
  @apply my-4;
}

article ol {
  @apply list-decimal;
  @apply list-outside;
  @apply ml-8;
  @apply my-4;
}

article pre {
  @apply my-4;
  @apply p-4;
  @apply bg-gray-200;
  @apply rounded-lg;
}

article code.language-poem {
  font-family: "GmarketSansMedium", sans-serif;
}

span.material-symbols-outlined {
  font-size: inherit;
  vertical-align: middle;
  font-variation-settings: "FILL" 1;
}

span.material-symbols-outlined.outlined {
  font-variation-settings: "FILL" 0;
}

